src/test/resources/good/custom/010-dead-register-elimination.lat
int main () {
    int x = readInt(), y = readInt();
    int z = x + y;
    return 0;
}
