src/test/resources/bad/provided/028-apostrophes.lat
void a'''() {}

void a''() {
}

int main() {
    a'''();
    a''();
    return 0;
}